selfhost/test/typechecker/_parser_error.out
Error at %FILE_NAME%:1:10
Unexpected token 'identifier', expected one of ',', ')':
  |  func f(a Int) {}
              ^
